--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/santino-vaziuta/" target="_blank" class="home__social-icon" ><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://github.com/svazkali" target="_blank" class="home__social-icon" ><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/santinovaziuta/" target="_blank" class="home__social-icon" ><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/svaziuta" target="_blank" class="home__social-icon" ><i class='bx bxl-github' ></i></a>
                     <a href="/assets/img/Cv-SantinoVaziuta.pdf" class="home__social-icon" download=""><i class='bx bxs-download' ></i></a>
                 </div>
 
@@ -200,8 +200,8 @@
         <footer class="footer">
             <p class="footer__title">Santino VZ</p>
             <div class="footer__social">
-                <a href="https://linkedin.com/in/santino-vaziuta/"  target="_blank" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://github.com/svazkali" target="_blank" class="footer__icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://linkedin.com/in/santinovaziuta/"  target="_blank" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://github.com/svaziuta" target="_blank" class="footer__icon"><i class='bx bxl-github' ></i></a>
                 <a href="/assets/img/Cv-SantinoVaziuta.pdf" download="" class="footer__icon"><i class='bx bxs-download' ></i></a>
             </div>
             <p class="footer__copy">&#169; Santino Vaziuta. All rigths reserved</p>
