--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <form action="" class="contact__form">
                         <input type="text" placeholder="Nombre" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <textarea name="" placeholder="Mensaje" id="" cols="0" rows="10" class="contact__input"></textarea>
                         <input type="button" value="Enviar" class="contact__button button">
                     </form>
                 </div>
