--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" placeholder="Mensaje" id="" cols="0" rows="10" class="contact__input"></textarea>
                         <input type="button" value="Enviar" class="contact__button button">
+                        <label for="mensaje">Mensaje:</label>
+                        <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje aquí..." cols="0" rows="10" class="contact__input"></textarea>
+
                     </form>
                 </div>
             </section>
