--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
                 <h2 class="section-title">Proyectos</h2>
 
                 <div class="work__container bd-grid">
+                    <a href="https://drive.google.com/drive/folders/1BJxrQBE6yiMe8cTGgFbAJc9gvqx8GLmN?usp=drive_link" class="work__img" target="_blank">
+                    <img src="assets/img/laesq.png" alt="">
+                    <a href="https://drive.google.com/drive/u/3/folders/1Cko8Agf9NszFiNUNCdckvl7f9zgSYGWq" class="work__img" target="_blank">
+                        <img src="assets/img/funcia.jpg" alt="">
+                    <a href="https://gonzalovaziuta.online" class="work__img" target="_blank">
+                        <img src="assets/img/gonza.png" alt="">
                     <a href="https://calculadora-svaz.netlify.app/" class="work__img" target="_blank">
                         <img src="assets/img/work1.jpg" alt="">
                     </a>
