--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
                 <h2 class="section-title">Proyectos</h2>
 
                 <div class="work__container bd-grid">
+                    <a href="https://proxibazar.shop/" class="work__img" target="_blank">
+                    <img src="assets/img/proxibazar.png" alt="">
                     <a href="https://drive.google.com/drive/folders/1BJxrQBE6yiMe8cTGgFbAJc9gvqx8GLmN?usp=drive_link" class="work__img" target="_blank">
                     <img src="assets/img/laesq.png" alt="">
                     <a href="https://drive.google.com/drive/u/3/folders/1Cko8Agf9NszFiNUNCdckvl7f9zgSYGWq" class="work__img" target="_blank">
